# second_brain

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
hippobox/: server.py
hippobox/core/: database.py  settings.py
hippobox/errors/: service.py
hippobox/models/: knowledge.py
hippobox/rag/: embedding.py
hippobox/routers/v1/: auth.py  knowledge.py
hippobox/services/: auth.py  knowledge.py
hippobox/utils/: auth.py
scripts/: build.ps1  build.sh
second_brain/: server.py
second_brain/core/: database.py  logging_config.py  settings.py
second_brain/models/: knowledge.py
second_brain/rag/: embedding.py  qdrant.py
second_brain/routers/v1/: knowledge.py
second_brain/services/: knowledge.py
second_brain/utils/: preprocess.py
src/backend/: .env.example  README.md  alembic.ini  pyproject.toml
src/backend/docker/: .env.example  Dockerfile  docker-compose.yml
src/backend/hippobox/: server.py
src/backend/hippobox/core/: database.py  email_templates.py  redis.py  settings.py
src/backend/hippobox/errors/: admin.py  auth.py  knowledge.py  service.py
src/backend/hippobox/migrations/: env.py
src/backend/hippobox/models/: api_key.py  auth.py  credential.py  knowledge.py  topic.py  user.py
src/backend/hippobox/services/: admin.py  auth.py  (+1 more)
src/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
src/frontend/scripts/: generate-openapi.mjs
src/frontend/src/: App.tsx  config-constants.ts  i18n.ts  index.css  main.tsx  routes.tsx  vite-env.d.ts
(+57 files in other folders)
